# EvoProtGrad

./: .pre-commit-config.yaml  pyproject.toml
evo_prot_grad/: __init__.py
evo_prot_grad/common/: sampler.py  utils.py
evo_prot_grad/experts/: pplm_expert.py
evo_prot_grad/models/: phage.py
